Fix editor misalignment in other usecases
Cover the changes with a tests.

Addionally, the commit removes unnecessary border from the headers. It
seems that it is a legacy code that comes out in RTL mode.

--- a/handsontable/src/3rdparty/walkontable/css/walkontable.scss
+++ b/handsontable/src/3rdparty/walkontable/css/walkontable.scss
@@ -220,17 +220,6 @@ innerBorderBottom - Property controlled by bottom overlay
   z-index: 180;
 }
 
-/*
-  Cell borders
-  */
-.handsontable tbody tr th:nth-last-child(2) {
-  border-inline-end: 1px solid #ccc;
-}
-
-.ht_clone_top_left_corner thead tr th:nth-last-child(2) {
-  border-inline-end: 1px solid #ccc;
-}
-
 .handsontable col.hidden {
   width: 0 !important;
 }
